@@ -2,6 +2,7 @@
 package edu.colorado.phet.linegraphing.linegame.view;
 
 import edu.colorado.phet.linegraphing.linegame.model.Challenge;
+import edu.colorado.phet.linegraphing.linegame.model.ManipulationMode;
 
 /**
  * Challenge graph that initially shows the answer, but not the user's guess.
@@ -15,5 +16,8 @@ class AnswerGraphNode extends ChallengeGraphNode {
         super( challenge, true /* slopeToolEnabled */ );
         setAnswerVisible( true );
         setGuessVisible( false );
+        setAnswerPointVisible( false );
+        setGuessPointVisible( false );
+        setSlopeToolVisible( false );
     }
 }
