@@ -29,10 +29,18 @@ public class PTP_ChallengeNode extends GTL_ChallengeNode {
     public PTP_ChallengeNode( final PTP_Challenge challenge, LineGameModel model, PDimension challengeSize, GameAudioPlayer audioPlayer ) {
         super( challenge, model, challengeSize, audioPlayer );
 
-        // Make the user's line visible only in states where there guess is wrong.
         model.state.addObserver( new VoidFunction1<PlayState>() {
             public void apply( PlayState state ) {
+
+                // show user's line only in states where there guess is wrong.
                 graphNode.setGuessVisible( !challenge.isCorrect() && ( state == PlayState.TRY_AGAIN || state == PlayState.NEXT ) );
+
+                /*
+                 * Plot (x1,y1) when for answer when user got the challenge wrong.
+                 * Do not plot (x1,y1) for guess because none of the 3 points corresponds to (x1,y1).
+                 */
+                graphNode.setAnswerPointVisible( state == PlayState.NEXT && !challenge.isCorrect() );
+                graphNode.setGuessPointVisible( false );
             }
         } );
     }
