@@ -1,3 +1,4 @@
+1/12/13 all challenges: plot (x1,y1) for answer and guess if they get the challenge wrong
 1/12/13 for PTP challenges, only show guess lines when (!correct && (state=TRY_AGAIN || state==NEXT))
 1/10/13 use only positive slopes for challenges in level 4 that force slope inversion
 1/10/13 show guess ("Your Line" for GLT, "A Correct Equation" for MTE) only if they get the challenge wrong, to avoid issue of different equations for the same line
